[package]
name = "ethers-rs-subscribe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs", features = [
    "ws",
    "ipc",
    "rustls",
] }
anyhow = "1.0.39"
rand = "0.8.4"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
config = "0.10"
lazy_static = "1.4"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
