[package]
name = "reverse-proxy-backrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper-reverse-proxy = { git = "https://github.com/daramir/hyper-reverse-proxy", branch = "daramir-mod" }
hyper = { version = "^0.14" }
hyper-rustls = { version = "^0.22" }
# tokio = { version = "0.2", features = ["full"] }
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
