[package]
name = "reverse-proxy-backrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.39"
config = "0.10"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = [
    "ws",
    "ipc",
    "rustls",
    "legacy"
] }
hyper-reverse-proxy = { git = "https://github.com/daramir/hyper-reverse-proxy", branch = "daramir-mod" }
hyper = { version = "^0.14" }
hyper-rustls = { version = "^0.22" }
# tokio = { version = "0.2", features = ["full"] }
lazy_static = "1.4"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.5", features = ["macros", "rt-multi-thread"] }
